--- a/1,HTML・CSS/3章/box/box.css
+++ b/1,HTML・CSS/3章/box/box.css
@@ -1,8 +1,7 @@
 .box1{
   width: 300px;
   height: 300px;
-  background-color: #FF0000;
-  margin: 30px;
+  background-color: #ffd700;
   padding: 30px;
   
 }
