--- a/1,HTML・CSS/10章/chapter10_style.css
+++ b/1,HTML・CSS/10章/chapter10_style.css
@@ -10,7 +10,7 @@ header{
  }
 
 main{
-  padding: 50px 0;
+  margin: 50px auto;
   display: flex;
   justify-content: center;
 }
@@ -69,4 +69,19 @@ main{
 footer{
   height: 50px;
   background-color: #aaaaaa;
+}
+
+@media screen and (max-width:768px){
+  .main-child{
+    width: 100%;
+    display: block;
+  }
+  .box{
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .box-space{
+    margin: 20px auto;
+  }
 }
