--- a/review_演習問題/review：HTML・CSS/review_1-8.css
+++ b/review_演習問題/review：HTML・CSS/review_1-8.css
@@ -17,3 +17,35 @@ li {
 li:nth-child(odd) {
   background-color: #c0c0c0;
 }
+
+.box-set {
+  margin: 50px 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.box {
+  width: 30%;
+  height: 200px;
+  background-color: yellow;
+}
+
+.box:first-child,
+.box:last-child {
+  background-color: orange;
+}
+
+.box:nth-child(2),
+.box:nth-child(8) {
+  margin: 0 5%;
+}
+
+.box:nth-child(4),
+.box:nth-child(6) {
+  margin: 40px 0;
+}
+
+.box:nth-child(5) {
+  background-color: orange;
+  margin: 40px 5%;
+}
