--- a/review_演習問題/review：HTML・CSS/review_Flexbox.css
+++ b/review_演習問題/review：HTML・CSS/review_Flexbox.css
@@ -11,4 +11,71 @@ header{
 .header-set{
   padding: 30px 20px;
   background-color: #ff00ff;
+  display: flex;
+  justify-content: flex-end;
 }
+
+.header-set > :first-child{
+  margin-right: auto;
+}
+
+.header-item{
+  flex-basis: 140px;
+  height: 70px;
+  margin: 0 10px;
+  background-color: #ffc0cb;
+}
+
+main{
+  display: flex;
+  justify-content: center;
+}
+
+.left-main{
+  width: 300px;
+  background-color: #90ee90;
+}
+
+.right-main{
+  padding: 20px;
+  max-width: 700px;
+  flex-grow: 1;
+  background-color: #008000;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.right-main-item{
+  margin: 10px;
+  flex-basis: 200px;
+  height: 130px;
+  background-color: #ffff00;
+}
+
+
+footer{
+  width: 100%;
+}
+
+.footer-set{
+  padding: 20px;
+  background-color: #6495ed;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.footer-item{
+  flex-basis: 45%;
+  max-width: 600px;
+  height: 40px;
+  margin: 10px;
+  background-color: #afeeee;
+}
+
+
+
+
+
+
+
