[Fix]答え合わせ後の修正

--- a/review_演習問題/review：HTML・CSS/review_Flexbox.css
+++ b/review_演習問題/review：HTML・CSS/review_Flexbox.css
@@ -61,7 +61,7 @@ footer{
   padding: 20px;
   background-color: #6495ed;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
